# project_difference_calculator

./: .coverage  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-and-linter-check.yml
difference_calculator/: __init__.py  gendiff.py  parser.py
difference_calculator/file_parsers/: json_parser.py  yaml_parser.py
difference_calculator/formatters/: formatter.py  plain.py
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py  gendiff.py  parser.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_json_parser.py  test_parser.py  test_yaml_parser.py
tests/fixtures/: json_fixture.py  nested_yaml_file1.yml  nested_yaml_file2.yml  yaml_fixture.py
