[tool.poetry]
name = "project-difference-calculator"
version = "0.1.0"
description = ""
authors = ["Евгений Прутян <buivan.proger@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
